--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,23 @@
         <version>4.12</version>
         <scope>test</scope>
       </dependency>
+
+      <dependency>
+        <groupId>org.hibernate</groupId>
+        <artifactId>hibernate-validator</artifactId>
+        <version>5.4.3.Final</version>
+      </dependency>
+      <dependency>
+        <groupId>com.fasterxml.jackson.core</groupId>
+        <artifactId>jackson-core</artifactId>
+        <version>2.5.2</version>
+      </dependency>
+      <dependency>
+        <groupId>com.fasterxml.jackson.core</groupId>
+        <artifactId>jackson-databind</artifactId>
+        <version>2.4.1.1</version>
+      </dependency>
+
     </dependencies>
   </dependencyManagement>
   <build>
