--- a/pom.xml
+++ b/pom.xml
@@ -12,8 +12,8 @@
     <module>web</module>
   </modules>
   <properties>
-    <maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
+    <java.version>1.11</java.version>
+    <maven.compiler.release>11</maven.compiler.release>
     <org.springframework-version>4.3.10.RELEASE</org.springframework-version>
   </properties>
   <dependencyManagement>
