--- a/web/pom.xml
+++ b/web/pom.xml
@@ -1,5 +1,5 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <parent>
     <groupId>com.es.phoneshop</groupId>
     <artifactId>phoneshop-parent</artifactId>
@@ -11,19 +11,19 @@
   <artifactId>phoneshop-web</artifactId>
   <packaging>war</packaging>
   <version>1.0-SNAPSHOT</version>
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-              <version>3.8.0</version>
-              <configuration>
-                <release>11</release>
-              </configuration>
-            </plugin>
-        </plugins>
-    </build>
-    <dependencies>
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.8.0</version>
+        <configuration>
+          <release>11</release>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
+  <dependencies>
     <dependency>
       <groupId>com.es.phoneshop</groupId>
       <artifactId>phoneshop-core</artifactId>
@@ -76,6 +76,11 @@
       <artifactId>hibernate-validator</artifactId>
       <version>5.4.3.Final</version>
     </dependency>
+        <dependency>
+          <groupId>javax.validation</groupId>
+          <artifactId>validation-api</artifactId>
+          <version>2.0.1.Final</version>
+        </dependency>
 
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
