--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
     <java.version>1.11</java.version>
     <maven.compiler.release>11</maven.compiler.release>
     <org.springframework-version>4.3.10.RELEASE</org.springframework-version>
+    <spring-security.version>4.2.19.RELEASE</spring-security.version>
   </properties>
   <dependencyManagement>
     <dependencies>
@@ -65,14 +66,33 @@
       <dependency>
         <groupId>com.fasterxml.jackson.core</groupId>
         <artifactId>jackson-core</artifactId>
-        <version>2.5.2</version>
+        <version>2.9.4</version>
       </dependency>
       <dependency>
         <groupId>com.fasterxml.jackson.core</groupId>
         <artifactId>jackson-databind</artifactId>
-        <version>2.4.1.1</version>
+        <version>2.9.4</version>
       </dependency>
-
+      <dependency>
+        <groupId>org.springframework.security</groupId>
+        <artifactId>spring-security-core</artifactId>
+        <version>${spring-security.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework.security</groupId>
+        <artifactId>spring-security-web</artifactId>
+        <version>${spring-security.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework.security</groupId>
+        <artifactId>spring-security-config</artifactId>
+        <version>${spring-security.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework.security</groupId>
+        <artifactId>spring-security-taglibs</artifactId>
+        <version>${spring-security.version}</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
   <build>
