--- a/web/pom.xml
+++ b/web/pom.xml
@@ -119,5 +119,11 @@
       <version>2.9.4</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+      <version>3.11</version>
+    </dependency>
+
   </dependencies>
 </project>
